Added filter file for clients spamming a server, and a sample jail entry

--- a/config/jail.conf
+++ b/config/jail.conf
@@ -839,3 +839,20 @@ logencoding = utf-8
 # See "haproxy-http-auth" filter for a brief cautionary note when setting
 # maxretry and findtime.
 logpath  = /var/log/haproxy.log
+
+[hlds]
+# This is for Half-Life (and friends) Dedicated Servers.
+# The logpath for this is, unfortunately, dependant on the server setup,
+# of which is completely up to the server operator. Moreover there is no
+# current implementation of the DS software that uses syslog calls.
+# In other words:
+# ******************************************************
+# **** SERVER OPERATORS SET UP THESE PATHS YOURSELF ****
+# ******************************************************
+# Format for log names is %Y-%m-%d.log
+# Have multiple log files by doing the following:
+# logpath = /path1/logs/*.log
+#           /path2/logs/*.log ... etc.
+banaction = %(banaction_allports)s
+logpath = /path/to/dedicated/server/logs/*.log
+
